--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- Developed by Kunwar Pratap -->
 
 <body>
     <div class="header">
@@ -93,6 +94,177 @@
 
     <div class="ads-container m-width">
         <h1>Fresh recommendations</h1>
+        <div class="ad-box">
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_1.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 23,999</p>
+                    <p class="ad-ml">Refurbihsed Iphone 13Series Available...</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">PARVATIPURAM, BANGALURU</p>
+                        <p class="ad-dt">3 DAYS AGO</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_2.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 54,08,000</p>
+                    <p class="ad-ml">Main Highway On Road Project</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">RAIPURA VILLAGE, RAIPUR</p>
+                        <p class="ad-dt">JUN02</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_3.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 6,500</p>
+                    <p class="ad-ml">Apple i phone 6s new 128gb with bill b...</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">JANAKPURI WEST, NEW DELHI</p>
+                        <p class="ad-dt">TODAY</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_4.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 16,500</p>
+                    <p class="ad-ml">Apple i phone 11 new 128gb with bill b...</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">SAMUDRAPUR MIDC, MAHARASHTRA</p>
+                        <p class="ad-dt">TODAY</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_5.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 30,000</p>
+                    <p class="ad-dtls">2013 - 11650 km</p>
+                    <p class="ad-ml">Hero ignitor instant Sell Exchange poss...</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">JADAVPUR, KOLKATA</p>
+                        <p class="ad-dt">TODAY</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_6.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 2,000</p>
+                    <p class="ad-ml">Hercules Bicycle in Excellent Condition</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">SECTOR 26, NOIDA</p>
+                        <p class="ad-dt">TODAY</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_7.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 15,000</p>
+                    <p class="ad-ml">Shop for rent in Samudrapur</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">SAMUDRAPUR, MAHARASHTRA</p>
+                        <p class="ad-dt">4 DAYS AGO</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_8.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 3,500</p>
+                    <p class="ad-ml">RD6 LED projector 3d 4k wifi smart you...</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">SAMUDRAPUR, MAHARASHTRA</p>
+                        <p class="ad-dt">TODAY</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_9.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 3,500</p>
+                    <p class="ad-ml">RD6 LED projector 3d 4k wifi smart you...</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">SAMUDRAPUR, MAHARASHTRA</p>
+                        <p class="ad-dt">TODAY</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_10.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 3,500</p>
+                    <p class="ad-ml">RD6 LED projector 3d 4k wifi smart you...</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">SAMUDRAPUR, MAHARASHTRA</p>
+                        <p class="ad-dt">TODAY</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_11.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 3,500</p>
+                    <p class="ad-ml">RD6 LED projector 3d 4k wifi smart you...</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">SAMUDRAPUR, MAHARASHTRA</p>
+                        <p class="ad-dt">TODAY</p>
+                    </div>
+                </div>
+            </div>
+            <div class="ad-item">
+                <div class="ad-img">
+                    <div class="img-main"><img src="/adds-img/add_12.png" alt="adds-img"></div>
+                    <div class="img-heart"><img src="/img/heart.svg" alt="selector"></div>
+                </div>
+                <div class="ad-det">
+                    <p class="ad-pr"><span>&#8377;</span> 3,500</p>
+                    <p class="ad-ml">RD6 LED projector 3d 4k wifi smart you...</p>
+                    <div class="adrs-bar">
+                        <p class="adrs-det">SAMUDRAPUR, MAHARASHTRA</p>
+                        <p class="ad-dt">TODAY</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="index.js"></script>
